--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.120.4",
+    "pandas>=2.3.3",
     "pydantic>=2.12.3",
+    "requests>=2.32.5",
     "uvicorn>=0.38.0",
 ]
 
