--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.120.4",
     "pydantic>=2.12.3",
+    "semantic-kernel>=1.15.0",
     "uvicorn>=0.38.0",
 ]
 
