--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,9 +5,13 @@ click==8.3.0
 fastapi==0.120.4
 h11==0.16.0
 idna==3.11
+openai>=1.0.0
+pandas>=2.3.3
 pydantic==2.12.3
 pydantic-core==2.41.4
+python-dotenv>=1.0.0
 ruff==0.14.3
+semantic-kernel>=1.16.0
 sniffio==1.3.1
 starlette==0.49.1
 typing-extensions==4.15.0
