--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.120.4",
     "pandas>=2.3.3",
+    "pydantic>=2.11.10",
     "python-dotenv>=1.2.1",
     "semantic-kernel>=1.16.0",
     "uvicorn>=0.38.0",
